change the theme of the site to white and modify Home.jsx

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Niko Hoffrén Homepage</title>
   </head>
-  <body style="background-image: linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.9)),url(rock2.jpg)">
+  <!-- <body style="background-image: linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.9)),url(rock2.jpg)"> -->
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
