change the whole project to TypeScript

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   <!-- <body style="background-image: linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.9)),url(rock2.jpg)"> -->
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
